# Valhalla-server

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Changelog.txt  README.md  Todo.txt  build.sh  compile_commands.json  conanfile.txt  cppcheck.supp  get_tag.sh  setup.txt  variables.cmake
.github/workflows/: ubuntu_build_release.yml
.github/workflows/docker/: Dockerfile  download.sh
.trunk/: trunk.yaml
.zed/: tasks.json
conan/: default
src/: main.cpp
src/api/: api_v1_routes.cpp  api_v1_routes.hpp
src/api/v2/: all_routes.hpp
src/api/v2/basic/: common.hpp
src/api/v2/filters/: auth.hpp  ratelimit.hpp
src/api/v2/helper/: helper.cpp  helper.hpp
src/api/v2/middlewares/: elapsedtime.hpp
src/api/v2/routes/: appointments  appointments.hpp  clients.hpp  clinics.hpp  hello.hpp  services.hpp  staff.hpp
src/configurator/: configurator.cpp  configurator.hpp  defaults.hpp
src/configurator/envloader/: envloader.cpp  envloader.hpp
src/configurator/envloader/envvars/: envvars.cpp  envvars.hpp
src/controllers/appointmentcontroller/: appointmentcontroller.cpp  appointmentcontroller.hpp  appointmentcontroller.tpp  appointmentcontrollerbase.hpp
src/controllers/base/controller/: controller.hpp
src/controllers/clientcontroller/: clientcontroller.cpp  clientcontroller.hpp  clientcontroller.tpp  clientcontrollerbase.hpp
src/controllers/cliniccontroller/: cliniccontroller.cpp  cliniccontroller.hpp  cliniccontrollerbase.hpp
src/controllers/databasecontroller/: databasecontroller.cpp  databasecontroller.hpp
src/controllers/entitycontroller/: entitycontroller.cpp  entitycontroller.hpp  entitycontrollerbase.hpp
src/controllers/servicecontroller/: servicecontroller.cpp  servicecontroller.hpp  servicecontroller.tpp  servicecontrollerbase.hpp
src/controllers/servicecontroller copy/: servicecontroller.hpp  servicecontrollerbase.hpp
src/controllers/staffcontroller/: staffcontroller.cpp  staffcontroller.hpp  staffcontrollerBase.hpp
src/database/: connectionguard.cpp  connectionguard.hpp  connectionhandler.cpp  connectionhandler.hpp  connectionmonitor.cpp  connectionmonitor.hpp  database.cpp  database.hpp  databaseconnectionpool.cpp  databaseconnectionpool.hpp  databasehandler.cpp  databasehandler.hpp  inuseguard.cpp  inuseguard.hpp  sqlinjectiondetector.cpp  sqlinjectiondetector.hpp  watchdog.cpp  watchdog.hpp
src/entities/appointments/: clinic.hpp  laboratory.hpp  pharmacy.hpp  radiologycenter.hpp  user.hpp
src/entities/appointments/base/: appointment.hpp
src/entities/base/: base.hpp  case.hpp  client.hpp  entity.hpp  service.hpp  types.hpp
src/entities/base/datatypes/: clientdata.cpp  clientdata.hpp
src/entities/people/: provider.hpp  user.hpp
src/entities/services/: laboratories.hpp  pharmacies.hpp  radiologycenters.hpp
src/entities/services/appointments/: clinic.hpp  laboratory.hpp  pharmacy.hpp  radiologycenter.hpp
src/entities/services/appointments/base/: appointment.hpp
src/entities/services/clinics/: clinics.hpp  health.hpp  paidservices.hpp  patientdrugs.hpp  visitdrugs.hpp  visits.hpp
src/entities/services/clinics/patient/: health.hpp  patient.hpp  patientdrugs.hpp  reports.hpp
src/entities/services/clinics/visits/: paidservices.hpp  prescriptions.hpp  requests.hpp  visitdrugs.hpp  visits.hpp
src/filters/: auth.hpp  ratelimit.hpp
src/gatekeeper/: gatekeeper.cpp  gatekeeper.hpp  includes.hpp  types.hpp
src/gatekeeper/dosdetector/: dosdetector.cpp  dosdetector.hpp
src/gatekeeper/keeprbase/: keeprbase.cpp  keeprbase.hpp
src/gatekeeper/passwordcrypt/: passwordcrypt.cpp  passwordcrypt.hpp
src/gatekeeper/permissionmanager/: context.hpp  permissionmanager.cpp  permissionmanager.hpp  permissionmanager_private.cpp  permissionmanager_private.hpp  permissions.hpp
src/gatekeeper/sessionmanager/: sessionmanager.cpp  sessionmanager.hpp
src/gatekeeper/sqlinjectiondetectoor/: sqlinjectiondetector.cpp  sqlinjectiondetector.hpp
src/gatekeeper/tokenmanager/: tokenmanager.cpp  tokenmanager.hpp
src/middlewares/: authentication.hpp  authorization.hpp  brequest.hpp  dataintegrity.hpp  deauthentication.hpp  elapsedtime.hpp  pathparameter.hpp  ratelimit.hpp  search.hpp  xrequest.hpp
src/objectfactory/: objectfactory.cpp  objectfactory.hpp
src/routes/: api_v1_routes.cpp  api_v1_routes.hpp  v2_routes.hpp
src/routes/api/v2/: clients.hpp  common.hpp  hello.hpp  services.hpp  typemaps.hpp  types.hpp
src/server/: server.cpp  server.hpp  server2.cpp  server2.hpp
src/server/extras/: banner.hpp
src/store/: store.cpp  store.hpp
src/utils/Logger/: logger.cpp  logger.hpp
src/utils/communicate/: communicate.cpp  communicate.hpp
src/utils/databaseschema/: databaseschema.cpp  databaseschema.hpp
src/utils/dosdetector/: dosdetector.cpp  dosdetector.hpp
src/utils/global/: callback.hpp  concepts.hpp  global.hpp  http.hpp  httpcodes.hpp  requester.hpp  types.hpp
src/utils/helper/: helper.cpp  helper.hpp
src/utils/jsonhelper/: jsonhelper.cpp  jsonhelper.hpp
src/utils/memcache/: memcache.hpp
src/utils/message/: message.cpp  message.hpp
src/utils/passwordcrypt/: passwordcrypt.cpp  passwordcrypt.hpp
src/utils/resthelper/: resthelper.cpp  resthelper.hpp
src/utils/sessionmanager/: sessionmanager.cpp  sessionmanager.hpp
src/utils/threadsafequeue/: threadsafequeue.hpp  threadsafequeue.tpp
src/utils/tokenmanager/: tokenmanager.cpp  tokenmanager.hpp
src/utils/validator/: validator.cpp  validator.hpp
src/validator/: validator.cpp  validator.hpp
src/validator/databaseschema/: databaseschema.cpp  databaseschema.hpp
tests/: CMakeLists.txt  test_main.cpp
tools/conan/: default  variables.cmake
